...
    <string name="content_text">Location Reminder</string>
    <string name="select_title">Please select title</string>
    <string name="select_location">Please select location</string>
    <string name="geofence_added">Geofence added</string>
    <string name="geofences_not_added">Problem while adding geofence.</string>
    <string name="welcome">Welcome</string>
    <string name="err_enter_title">Please enter title</string>
    <string name="err_enter_description">Please enter α description</string>
    <string name="err_select_location">Please select location</string>
    <string name="login_unsuccessful_msg">Login unsuccessful</string>
    <string name="no_reminders">There are no reminders</string>
    <!-- Error strings -->
    <string name="geofence_unknown_error">Unknown error: the Geofence service is not available now.</string>
    <string name="geofence_not_available">Geofence service is not available now. Go to Settings>Location>Mode and choose High accuracy.</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences.</string>
...
    <string name="geofence_remove_error">Error while removing geofence\n</string>
    <string name="new_reminder">New reminder</string>

    <string name="verify_delete_geofence">Are you sure you want to Delete this location reminder?</string>

    <string name="EXTRA_reminder">EXTRA_REMINDER</string>
    <string name="location">Location</string>
    <string name="longitude">Longitude</string>
    <string name="description">Description</string>
    <string name="latitude">Latitude</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="verify_delete">Are you sure you want to delete this reminder?</string>

    <string name="max_geofences_reached">You cannot add more than %1$d geofences!</string>
...
