...
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="vertical"
                android:layout_weight=".5">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:ellipsize="end"
                    android:text="@{item.title}"
                    android:textColor="@color/black"
...
